Fixed Clearfix to prevent margin-collapsing. Fixes #126. Thanks Ivannikolic!

--- a/css/style.css
+++ b/css/style.css
@@ -201,8 +201,10 @@ button {  width: auto; overflow: visible; }
 /* Hide visually and from screenreaders, but maintain layout */
 .invisible { visibility: hidden; }
 
-/* >> The Magnificent CLEARFIX << j.mp/phayesclearfix */
-.clearfix:after  { content: "\0020"; display: block; height: 0; clear: both; visibility: hidden; }
+/* >> The Magnificent CLEARFIX: Updated to prevent margin-collapsing on children elements << j.mp/bestclearfix */
+.clearfix:before, .clearfix:after {
+  content: "\0020"; display: block; height: 0; visibility: hidden;	
+}
 /* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
 .clearfix { zoom: 1; }
 
